           personal scripts with the METHOD parm.

           Merged all the SCRIPT_DATABASE* plugins into SCRIPT_DATABASE plugin. CVS users please update your
           personal scripts with the METHOD parm.

           Merged all the QUOTE_DATABASE* plugins into QUOTE_DATABASE plugin. CVS users please update your
           personal scripts with the METHOD parm.

           Merged all the INDICATOR_PLOT* plugins into INDICATOR plugin. CVS users please update your
           personal scripts with the METHOD parm.

           Removed indicator scripts that are duplicated by the plugins.

           Merged all the INDICATOR_DATABASE* plugins into INDICATOR_DATABASE plugin. CVS users please update your
           personal scripts with the METHOD parm.

           Merged all the PLOT_* plugins into PLOT plugin. CVS users please update your
           personal scripts with the METHOD parm.

           Merged all the SETTINGS_* plugins into SETTINGS plugin. CVS users please update your
           personal scripts with the METHOD parm.

           Merged all the CHART_PANEL_REFRESH, GROUP_PANEL_REFRESH,SCRIPT_RUN plugins into CONTROL_PANEL plugin.
           CVS users please update your personal scripts with the METHOD parm.

           Merged ADD,DIV,MULT,SUB plugins into ARITHMETIC plugin. CVS users please update your
           personal scripts with the METHOD parm.

           Added COLOR plugin.

20110408:  Added COMPARE plugin.

           Changed some of the plugin dialogs to handle multiple calculations to reduce the amount of function
           tabs when building indicators.

           Removed VOL plugin. Redundant.

           Merged WILDER_MA plugin with MA plugin.

           Modified certain plugins to handle the NAME.X index format.

           Added add indicator and remove indicator options to the chart context menu. These allow indicators
           to be turned on/off without removing permanantly from the database.

           Added SHIFT plugin.
