@@ -1220,3 +1220,5 @@
 
            Added SHIFT plugin.
 
+           Added IndicatorExport.pl and IndicatorImport.pl scripts.
+
